[gd_scene load_steps=2 format=3 uid="uid://c23hb5dankbmx"]

[ext_resource type="Script" path="res://gui/menu/lobby_menu.gd" id="1_38ide"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38ide")

[node name="ContentContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -282.5
offset_right = 150.0
offset_bottom = 282.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="LobbyLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Lobby"
horizontal_alignment = 1

[node name="PlayerList" type="BoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="ReadyButton" type="CheckButton" parent="ContentContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Ready"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 109.0
offset_bottom = 81.0
text = "< Back"

[connection signal="toggled" from="ContentContainer/ReadyButton" to="." method="set_ready"]
[connection signal="pressed" from="BackButton" to="." method="quit"]
